@@ -1,8 +1,9 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
+import java.util.*
 
 tasks.test {
-    useJUnitPlatform()
+	useJUnitPlatform()
 	maxHeapSize = "4g"
 	minHeapSize = "512m"
 
@@ -13,8 +14,6 @@ tasks.test {
 		showStackTraces = true
 		showStandardStreams = true
 	}
-
-	exclude("klang/parser/libclang/**")
 }
 
 dependencies {
@@ -23,9 +22,20 @@ dependencies {
 	implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0")
 	implementation("io.github.microutils:kotlin-logging:1.7.4")
 	implementation("org.slf4j:slf4j-simple:1.7.26")
-	api(project(":libclang"))
+	api(project(":jextract"))
 	implementation(libs.arrow.core)
 	implementation(libs.arrow.fx.coroutines)
 	api(libs.kotlinpoet)
 	testImplementation(libs.kotest)
+}
+
+tasks.withType<JavaCompile>().configureEach {
+	options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+	jvmArgs(
+		"--enable-preview",
+		"--enable-native-access=ALL-UNNAMED"
+	)
 }
